Add ext-simplexml to composer

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "psr-4": {"Nikoutel\\HelionConfig\\": "src/"}
     },
     "require": {
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "ext-simplexml": "*"
     },
     "require-dev": {
         "nikoutel/phpdebugr": "^1.1"
