Add ext-json to composer

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "ext-curl": "*",
         "ext-simplexml": "*",
-        "ext-libxml": "*"
+        "ext-libxml": "*",
+        "ext-json": "*"
     },
     "require-dev": {
         "nikoutel/phpdebugr": "^1.1"
